fixed some align; 1755

--- a/src/api/client/blockexplorer.css
+++ b/src/api/client/blockexplorer.css
@@ -293,37 +293,39 @@ table {
 }
 
 .selectBox{
-    width: 100%;
+  width: 100%;
 }
 
 .leftAlignForm{
-    text-align: left;
+  text-align: left;
 }
 
 .balanceOfAccount{
-    float: right;
+  float: right;
 }
 
 .accountDialogContent{
-    padding: 0px 0px 10px 2px !important;
+  padding: 0px 0px 10px 2px !important;
 }
 
 .accountList{
-    padding: 0px 0px 10px 2px !important;
-    overflow: scroll;
-    height: 5em;
+  padding: 0px 0px 10px 2px !important;
+  overflow: scroll;
+  height: 5em;
 }
 
 .dialog{
-    border-radius: 2px;
-    background-color: #fff;
-    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+  border-radius: 2px;
+  background-color: #fff;
+  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
 .fee-font{
   font-size: 13px !important;
 }
-
+.displayBlock{
+  display: block;
+}
 /* .selectAccountDiv{
     padding: 1em 2em 1em 2em;
 } */
